Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn35.121:37.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn35.121:38.1": "„Nein, Herr.“ ",
   "sn35.121:39.1": "„Sind Gedanken … ",
-  "sn35.121:41.1": "Ist Geistbewusstsein … "
+  "sn35.121:41.1": "Ist Geistbewusstsein … ",
+  "sn35.121:43.1": "Ist Geistberührung beständig oder unbeständig?“ "
 }
