--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn35.121:41.1": "Ist Geistbewusstsein … ",
   "sn35.121:43.1": "Ist Geistberührung beständig oder unbeständig?“ ",
   "sn35.121:44.1": "„Unbeständig, Herr.“ … ",
-  "sn35.121:45.1": "„Alles, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, das durch Geistberührung bedingt entsteht – ist das beständig oder unbeständig?“ "
+  "sn35.121:45.1": "„Alles, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, das durch Geistberührung bedingt entsteht – ist das beständig oder unbeständig?“ ",
+  "sn35.121:46.1": "„Unbeständig, Herr.“ "
 }
