--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "sn35.121:43.1": "Ist Geistberührung beständig oder unbeständig?“ ",
   "sn35.121:44.1": "„Unbeständig, Herr.“ … ",
   "sn35.121:45.1": "„Alles, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, das durch Geistberührung bedingt entsteht – ist das beständig oder unbeständig?“ ",
-  "sn35.121:46.1": "„Unbeständig, Herr.“ "
+  "sn35.121:46.1": "„Unbeständig, Herr.“ ",
+  "sn35.121:47.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
 }
