Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -49,5 +49,6 @@
   "sn35.121:44.1": "„Unbeständig, Herr.“ … ",
   "sn35.121:45.1": "„Alles, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, das durch Geistberührung bedingt entsteht – ist das beständig oder unbeständig?“ ",
   "sn35.121:46.1": "„Unbeständig, Herr.“ ",
-  "sn35.121:47.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
+  "sn35.121:47.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
+  "sn35.121:48.1": "„Leiden, Herr.“ "
 }
