--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "sn35.121:46.1": "„Unbeständig, Herr.“ ",
   "sn35.121:47.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn35.121:48.1": "„Leiden, Herr.“ ",
-  "sn35.121:49.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
+  "sn35.121:49.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
+  "sn35.121:49.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
