--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -52,5 +52,6 @@
   "sn35.121:47.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn35.121:48.1": "„Leiden, Herr.“ ",
   "sn35.121:49.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
-  "sn35.121:49.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
+  "sn35.121:49.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
+  "sn35.121:50.1": "„Nein, Herr.“ "
 }
