--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "sn35.121:48.1": "„Leiden, Herr.“ ",
   "sn35.121:49.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
   "sn35.121:49.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
-  "sn35.121:50.1": "„Nein, Herr.“ "
+  "sn35.121:50.1": "„Nein, Herr.“ ",
+  "sn35.121:51.1": "„Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert vom Auge, von Bildern, vom Augenbewusstsein und der Augenberührung. Er wird ernüchtert von allem, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, was durch Augenberührung bedingt entsteht. "
 }
