--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "sn35.121:49.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn35.121:50.1": "„Nein, Herr.“ ",
   "sn35.121:51.1": "„Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert vom Auge, von Bildern, vom Augenbewusstsein und der Augenberührung. Er wird ernüchtert von allem, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, was durch Augenberührung bedingt entsteht. ",
-  "sn35.121:51.2": "Er wird ernüchtert vom Ohr … von der Nase … von der Zunge … vom Körper … "
+  "sn35.121:51.2": "Er wird ernüchtert vom Ohr … von der Nase … von der Zunge … vom Körper … ",
+  "sn35.121:52.1": "Er wird ernüchtert vom Geist, von Gedanken, vom Geistbewusstsein, von Geistberührung und von Gefühl. Er wird ernüchtert von allem, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, was durch Geistberührung bedingt entsteht. "
 }
