--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "sn35.121:52.2": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. ",
   "sn35.121:52.3": "Er versteht: ‚Wiedergeburt ist beendet; die spirituelle Reise ist abgeschlossen; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
   "sn35.121:53.1": "Das sagte der Buddha. ",
-  "sn35.121:53.2": "Zufrieden freute sich der Ehrwürdige Rāhula über die Worte des Buddha. "
+  "sn35.121:53.2": "Zufrieden freute sich der Ehrwürdige Rāhula über die Worte des Buddha. ",
+  "sn35.121:53.3": "Und während diese Lehrrede gesprochen wurde, wurde der Geist des Ehrwürdigen Rāhula durch Nicht-Ergreifen von den Befleckungen befreit. "
 }
