--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "sn35.121:53.1": "Das sagte der Buddha. ",
   "sn35.121:53.2": "Zufrieden freute sich der Ehrwürdige Rāhula über die Worte des Buddha. ",
   "sn35.121:53.3": "Und während diese Lehrrede gesprochen wurde, wurde der Geist des Ehrwürdigen Rāhula durch Nicht-Ergreifen von den Befleckungen befreit. ",
-  "sn35.121:53.4": "Und den vielen tausend Gottheiten ging das unbefleckte, makellose Auge des Dhamma auf: "
+  "sn35.121:53.4": "Und den vielen tausend Gottheiten ging das unbefleckte, makellose Auge des Dhamma auf: ",
+  "sn35.121:53.5": "„Alles, was einen Anfang hat, hat auch ein Ende.“ "
 }
