--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.122_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.122:0.1": "Verbundene Lehrreden 35.122 ",
-  "sn35.122:0.2": "12. Das Kapitel über die Welt und die Arten sinnlicher Erregung "
+  "sn35.122:0.2": "12. Das Kapitel über die Welt und die Arten sinnlicher Erregung ",
+  "sn35.122:0.3": "Dinge, die einen leicht fesseln "
 }
