--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -126,5 +126,6 @@
   "dn15:22.6": "Samo dotle postoji put označavanja, samo dotle put jezika, samo dotle put opisivanja, samo dotle područje mudrosti, samo dotle se krug preporađanja nastavlja tako da je moguće pronaći stanje bivanja, dakle postoji mentalno-materijalno zajedno sa svešću.",
   "dn15:23.0": "2. Opis sopstva",
   "dn15:23.1": "Ānanda, kada neko opisuje sopstvo, na koje načine ga opisuje? ",
-  "dn15:23.2": "Opisuje sopstvo tako da ima materijalni oblik i kao ograničeno:"
+  "dn15:23.2": "Opisuje sopstvo tako da ima materijalni oblik i kao ograničeno:",
+  "dn15:23.3": "’Moje sopstvo ima fizički oblik i ograničeno je.’"
 }
