--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -128,5 +128,6 @@
   "dn15:23.1": "Ānanda, kada neko opisuje sopstvo, na koje načine ga opisuje? ",
   "dn15:23.2": "Opisuje sopstvo tako da ima materijalni oblik i kao ograničeno:",
   "dn15:23.3": "’Moje sopstvo ima fizički oblik i ograničeno je.’",
-  "dn15:23.4": "Ili ga opisuju tako da ima materijalni oblik i kao neograničeno:"
+  "dn15:23.4": "Ili ga opisuju tako da ima materijalni oblik i kao neograničeno:",
+  "dn15:23.5": "’Moje sopstvo ima fizički oblik i neograničeno je.’"
 }
