--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -130,5 +130,6 @@
   "dn15:23.3": "’Moje sopstvo ima fizički oblik i ograničeno je.’",
   "dn15:23.4": "Ili ga opisuju tako da ima materijalni oblik i kao neograničeno:",
   "dn15:23.5": "’Moje sopstvo ima materijalni oblik i neograničeno je.’",
-  "dn15:23.6": "Opisuje sopstvo tako da nema materijalni oblik i kao ograničeno:"
+  "dn15:23.6": "Opisuje sopstvo tako da nema materijalni oblik i kao ograničeno:",
+  "dn15:23.7": "’Moje sopstvo je nematerijalno i ograničeno.’"
 }
