Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -132,5 +132,6 @@
   "dn15:23.5": "’Moje sopstvo ima materijalni oblik i neograničeno je.’",
   "dn15:23.6": "Opisuje sopstvo tako da nema materijalni oblik i kao ograničeno:",
   "dn15:23.7": "’Moje sopstvo je nematerijalno i ograničeno.’",
-  "dn15:23.8": "Ili ga opisuju tako da nema materijalni oblik i kao neograničeno:"
+  "dn15:23.8": "Ili ga opisuju tako da nema materijalni oblik i kao neograničeno:",
+  "dn15:23.9": "’Moje sopstvo nema materijalni oblik i neograničeno je.’"
 }
