--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.122_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn35.122:1.1": "„Mönche und Nonnen, ich will euch die Dinge lehren, die einen leicht fesseln, sowie die Fessel. ",
   "sn35.122:1.2": "Hört zu … ",
   "sn35.122:1.3": "Was sind die Dinge, die einen leicht fesseln? Und was ist die Fessel? ",
-  "sn35.122:1.4": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "sn35.122:1.4": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "sn35.122:1.5": "Das nennt man die Dinge, die einen leicht fesseln. "
 }
