Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.123_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.123_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.123_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.123:0.1": "Verbundene Lehrreden 35.123 ",
-  "sn35.123:0.2": "12. Das Kapitel über die Welt und die Arten sinnlicher Erregung "
+  "sn35.123:0.2": "12. Das Kapitel über die Welt und die Arten sinnlicher Erregung ",
+  "sn35.123:0.3": "Dinge, die zum Ergreifen einladen "
 }
