--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -999,6 +999,7 @@
   "sn-name:1105.sn35.120": "Sāriputta und der Schüler ",
   "sn-name:1106.sn35.121": "Rat an Rāhula ",
   "sn-name:1107.sn35.122": "Dinge, die einen leicht fesseln ",
+  "sn-name:1108.sn35.123": "Dinge, die zum Ergreifen einladen ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
