--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.123_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.123_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.123:0.2": "12. Das Kapitel über die Welt und die Arten sinnlicher Erregung ",
   "sn35.123:0.3": "Dinge, die zum Ergreifen einladen ",
   "sn35.123:1.1": "„Mönche und Nonnen, ich will euch die Dinge lehren, die zum Ergreifen einladen, sowie das Ergreifen. ",
-  "sn35.123:1.2": "Hört zu … "
+  "sn35.123:1.2": "Hört zu … ",
+  "sn35.123:1.3": "Was sind die Dinge, die zum Ergreifen einladen? Und was ist das Ergreifen? "
 }
