--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.123_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.123_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.123:1.3": "Was sind die Dinge, die zum Ergreifen einladen? Und was ist das Ergreifen? ",
   "sn35.123:1.4": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.123:1.5": "Das nennt man die Dinge, die zum Ergreifen einladen. ",
-  "sn35.123:1.6": "Das Sehnen und Begehren nach ihnen ist das Ergreifen. "
+  "sn35.123:1.6": "Das Sehnen und Begehren nach ihnen ist das Ergreifen. ",
+  "sn35.123:1.7": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … "
 }
