Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -134,5 +134,6 @@
   "dn15:23.7": "’Moje sopstvo je nematerijalno i ograničeno.’",
   "dn15:23.8": "Ili ga opisuju tako da nema materijalni oblik i kao neograničeno:",
   "dn15:23.9": "’Moje sopstvo nema materijalni oblik i neograničeno je.’",
-  "dn15:24.1": "Ānanda, uzmimo onoga ko opisuje sopstvo tako da ima materijalni oblik i ograničeno je."
+  "dn15:24.1": "Ānanda, uzmimo onoga ko opisuje sopstvo tako da ima materijalni oblik i ograničeno je.",
+  "dn15:24.2": "On takvo sopstvo opisuje tako kao da postoji samo u sadašnjosti ili ga opisuje tako kao da postoji samo u budućnosti ili razmišlja: ’Iako ono nije takvo, ja ću s epostarati da takvo postane’."
 }
