Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -138,5 +138,6 @@
   "dn15:24.2": "On takvo sopstvo opisuje tako kao da postoji samo u sadašnjosti ili ga opisuje tako kao da postoji samo u budućnosti ili razmišlja: ’Iako ono nije takvo, ja ću s epostarati da takvo postane’.",
   "dn15:24.3": "Pošto je tako, slobodno se može reći da čvrsto gledište da sopstvo ima materijalni oblik i da je ograničeno leži u osnovi ovakvog razmišljanja.",
   "dn15:24.4": "Uzmimo onoga ko opisuje sopstvo tako da ima materijalni oblik i neograničeno je…",
-  "dn15:24.7": "nema materijalni oblik i ograničeno je…"
+  "dn15:24.7": "nema materijalni oblik i ograničeno je…",
+  "dn15:24.10": "nema materijalni oblik i neograničeno je."
 }
