--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -143,5 +143,6 @@
   "dn15:24.11": "On takvo sopstvo opisuje tako kao da postoji samo u sadašnjosti ili ga opisuje tako kao da postoji samo u budućnosti ili razmišlja: ’Iako ono nije takvo, ja ću s epostarati da takvo postane’.",
   "dn15:24.12": "Pošto je tako, slobodno se može reći da čvrsto gledište da sopstvo inema materijalni oblik i da je neograničeno leži u osnovi ovakvog razmišljanja.",
   "dn15:24.13": "Ānanda, kada neko opisuje sopstvo, na takve načine ga opisuje? ",
-  "dn15:25.0": "3. Neopisivanje sopstva"
+  "dn15:25.0": "3. Neopisivanje sopstva",
+  "dn15:25.1": "Ānanda, kada neko opisuje sopstvo, na koje načine ga opisuje? "
 }
