Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -144,5 +144,6 @@
   "dn15:24.12": "Pošto je tako, slobodno se može reći da čvrsto gledište da sopstvo inema materijalni oblik i da je neograničeno leži u osnovi ovakvog razmišljanja.",
   "dn15:24.13": "Ānanda, kada neko opisuje sopstvo, na takve načine ga opisuje? ",
   "dn15:25.0": "3. Neopisivanje sopstva",
-  "dn15:25.1": "Ānanda, kada neko opisuje sopstvo, na koje načine ga opisuje? "
+  "dn15:25.1": "Ānanda, kada neko opisuje sopstvo, na koje načine ga opisuje? ",
+  "dn15:25.2": "Opisuje sopstvo tako da ima materijalni oblik i kao ograničeno:"
 }
