Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -145,5 +145,6 @@
   "dn15:24.13": "Ānanda, kada neko opisuje sopstvo, na takve načine ga opisuje? ",
   "dn15:25.0": "3. Neopisivanje sopstva",
   "dn15:25.1": "Ānanda, kada neko opisuje sopstvo, na koje načine ga opisuje? ",
-  "dn15:25.2": "Opisuje sopstvo tako da ima materijalni oblik i kao ograničeno:"
+  "dn15:25.2": "Opisuje sopstvo tako da ima materijalni oblik i kao ograničeno:",
+  "dn15:25.3": "’Moje sopstvo ima fizički oblik i ograničeno je.’"
 }
