--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -148,5 +148,6 @@
   "dn15:25.2": "Ne opisuje sopstvo tako da ima materijalni oblik i kao ograničeno:",
   "dn15:25.3": "’Moje sopstvo ima fizički oblik i ograničeno je.’",
   "dn15:25.4": "Ili ga ne opisuju tako da ima materijalni oblik i kao neograničeno:",
-  "dn15:25.5": "’Moje sopstvo ima materijalni oblik i neograničeno je.’"
+  "dn15:25.5": "’Moje sopstvo ima materijalni oblik i neograničeno je.’",
+  "dn15:25.6": "Ne opisuje sopstvo tako da nema materijalni oblik i kao ograničeno:"
 }
