Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -149,6 +149,6 @@
   "dn15:25.3": "’Moje sopstvo ima fizički oblik i ograničeno je.’",
   "dn15:25.4": "Ili ga ne opisuju tako da ima materijalni oblik i kao neograničeno:",
   "dn15:25.5": "’Moje sopstvo ima materijalni oblik i neograničeno je.’",
-  "dn15:25.6": "Ne opisuje sopstvo tako da nema materijalni oblik i kao ograničeno:",
+  "dn15:25.6": "Ili ga ne opisuje tako da nema materijalni oblik i kao ograničeno:",
   "dn15:25.7": "’Moje sopstvo je nematerijalno i ograničeno.’"
 }
