--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -150,5 +150,6 @@
   "dn15:25.4": "Ili ga ne opisuju tako da ima materijalni oblik i kao neograničeno:",
   "dn15:25.5": "’Moje sopstvo ima materijalni oblik i neograničeno je.’",
   "dn15:25.6": "Ili ga ne opisuje tako da nema materijalni oblik i kao ograničeno:",
-  "dn15:25.7": "’Moje sopstvo je nematerijalno i ograničeno.’"
+  "dn15:25.7": "’Moje sopstvo je nematerijalno i ograničeno.’",
+  "dn15:25.8": "Ili ga ne opisuju tako da nema materijalni oblik i kao neograničeno:"
 }
