Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -146,7 +146,7 @@
   "dn15:25.0": "3. Neopisivanje sopstva",
   "dn15:25.1": "Ānanda, kada neko ne opisuje sopstvo, na koje načine ga ne opisuje? ",
   "dn15:25.2": "Ne opisuje sopstvo tako da ima materijalni oblik i kao ograničeno:",
-  "dn15:25.3": "’Moje sopstvo ima fizički oblik i ograničeno je.’",
+  "dn15:25.3": "’Moje sopstvo je materijalno i ograničeno je.’",
   "dn15:25.4": "Ili ga ne opisuju tako da ima materijalni oblik i kao neograničeno:",
   "dn15:25.5": "’Moje sopstvo ima materijalni oblik i neograničeno je.’",
   "dn15:25.6": "Ili ga ne opisuje tako da nema materijalni oblik i kao ograničeno:",
