--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -133,7 +133,7 @@
   "dn15:23.6": "Opisuje sopstvo tako da nema materijalni oblik i kao ograničeno:",
   "dn15:23.7": "’Moje sopstvo je nematerijalno i ograničeno.’",
   "dn15:23.8": "Ili ga opisuju tako da nema materijalni oblik i kao neograničeno:",
-  "dn15:23.9": "’Moje sopstvo nema materijalni oblik i neograničeno je.’",
+  "dn15:23.9": "’Moje sopstvo je nematerijalno i neograničeno je.’",
   "dn15:24.1": "Ānanda, uzmimo onoga ko opisuje sopstvo tako da ima materijalni oblik i ograničeno je.",
   "dn15:24.2": "On takvo sopstvo opisuje tako kao da postoji samo u sadašnjosti ili ga opisuje tako kao da postoji samo u budućnosti ili razmišlja: ’Iako ono nije takvo, ja ću s epostarati da takvo postane’.",
   "dn15:24.3": "Pošto je tako, slobodno se može reći da čvrsto gledište da sopstvo ima materijalni oblik i da je ograničeno leži u osnovi ovakvog razmišljanja.",
