Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -152,5 +152,6 @@
   "dn15:25.6": "Ili ga ne opisuje tako da nema materijalni oblik i kao ograničeno:",
   "dn15:25.7": "’Moje sopstvo je nematerijalno i ograničeno.’",
   "dn15:25.8": "Ili ga ne opisuju tako da nema materijalni oblik i kao neograničeno:",
-  "dn15:25.9": "’Moje sopstvo je nematerijalno i neograničeno je.’"
+  "dn15:25.9": "’Moje sopstvo je nematerijalno i neograničeno je.’",
+  "dn15:26.1": "Ānanda, uzmimo onoga ko ne opisuje sopstvo tako da ima materijalni oblik i ograničeno je."
 }
