Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -153,5 +153,6 @@
   "dn15:25.7": "’Moje sopstvo je nematerijalno i ograničeno.’",
   "dn15:25.8": "Ili ga ne opisuju tako da nema materijalni oblik i kao neograničeno:",
   "dn15:25.9": "’Moje sopstvo je nematerijalno i neograničeno je.’",
-  "dn15:26.1": "Ānanda, uzmimo onoga ko ne opisuje sopstvo tako da ima materijalni oblik i ograničeno je."
+  "dn15:26.1": "Ānanda, uzmimo onoga ko ne opisuje sopstvo tako da ima materijalni oblik i ograničeno je.",
+  "dn15:26.2": "On takvo sopstvo ne opisuje tako kao da postoji samo u sadašnjosti, niti ga opisuje tako kao da postoji samo u budućnosti, niti razmišlja: ’Iako ono nije takvo, ja ću se postarati da takvo postane’."
 }
