--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -159,5 +159,6 @@
   "dn15:26.4": "Uzmimo onoga ko opisuje sopstvo tako da ima materijalni oblik i neograničeno je…",
   "dn15:26.7": "nema materijalni oblik i ograničeno je…",
   "dn15:26.10": "nema materijalni oblik i neograničeno je.",
-  "dn15:26.11": "On takvo sopstvo ne opisuje tako kao da postoji samo u sadašnjosti, niti ga opisuje tako kao da postoji samo u budućnosti, niti razmišlja: ’Iako ono nije takvo, ja ću se postarati da takvo postane’."
+  "dn15:26.11": "On takvo sopstvo ne opisuje tako kao da postoji samo u sadašnjosti, niti ga opisuje tako kao da postoji samo u budućnosti, niti razmišlja: ’Iako ono nije takvo, ja ću se postarati da takvo postane’.",
+  "dn15:26.12": "Pošto je tako, slobodno se može reći da čvrsto gledište da sopstvo nema materijalni oblik i da je neograničeno ne leži u osnovi ovakvog razmišljanja."
 }
