Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -161,5 +161,6 @@
   "dn15:26.10": "nema materijalni oblik i neograničeno je.",
   "dn15:26.11": "On takvo sopstvo ne opisuje tako kao da postoji samo u sadašnjosti, niti ga opisuje tako kao da postoji samo u budućnosti, niti razmišlja: ’Iako ono nije takvo, ja ću se postarati da takvo postane’.",
   "dn15:26.12": "Pošto je tako, slobodno se može reći da čvrsto gledište da sopstvo nema materijalni oblik i da je neograničeno ne leži u osnovi ovakvog razmišljanja.",
-  "dn15:26.13": "Ānanda, kada neko ne opisuje sopstvo, na takve načine ga ne opisuje? "
+  "dn15:26.13": "Ānanda, kada neko ne opisuje sopstvo, na takve načine ga ne opisuje? ",
+  "dn15:27.0": "4. Razmatranje sopstva"
 }
