--- a/translation/en/sujato/sutta/dn/dn16_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn16_translation-en-sujato.json
@@ -487,7 +487,7 @@
   "dn16:2.25.11": "Just as a decrepit cart keeps going by relying on straps, ",
   "dn16:2.25.12": "in the same way, the Realized One’s body keeps going by relying on straps, or so you’d think. ",
   "dn16:2.25.13": "Sometimes the Realized One, not focusing on any signs, and with the cessation of certain feelings, enters and remains in the signless immersion of the heart. Only then does the Realized One’s body become more comfortable. ",
-  "dn16:2.26.1": "So Ānanda, be your own island, your own refuge, with no other refuge. Let the teaching be your island and your refuge, with no other refuge. ",
+  "dn16:2.26.1": "So Ānanda, live as your own island, your own refuge, with no other refuge. Let the teaching be your island and your refuge, with no other refuge. ",
   "dn16:2.26.2": "And how does a mendicant do this? ",
   "dn16:2.26.3": "It’s when a mendicant meditates by observing an aspect of the body—keen, aware, and mindful, rid of desire and aversion for the world. ",
   "dn16:2.26.4": "They meditate observing an aspect of feelings … ",
