Translations by sujato to translation/en/sujato/sutta/sn/sn35/sn35.75_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn35/sn35.75_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.75_translation-en-sujato.json
@@ -22,7 +22,7 @@
   "sn35.75:8.1": "“Good, good, mendicant! ",
   "sn35.75:8.2": "It’s good that you understand that I’ve taught the Dhamma for the purpose of complete extinguishment by not grasping. ",
   "sn35.75:8.3": "For that is indeed the purpose. ",
-  "sn35.75:9.1": "“What do you think, mendicant? ",
+  "sn35.75:9.1": "What do you think, mendicant? ",
   "sn35.75:9.2": "Is the eye permanent or impermanent?” ",
   "sn35.75:10.1": "“Impermanent, sir.” … ",
   "sn35.75:11.1": "",
