Translations by sujato to translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
@@ -32,7 +32,7 @@
   "an6.56:7.4": "“Sir, soon after the Buddha left, Venerable Phagguṇa died. ",
   "an6.56:7.5": "At the time of his death, his faculties were bright and clear.” ",
   "an6.56:8.1": "“And why shouldn’t his faculties be bright and clear? ",
-  "an6.56:8.2": "The mendicant Phagguṇa’s mind was not freed from the five lower fetters. ",
+  "an6.56:8.2": "The mendicant Phagguna’s mind was not freed from the five lower fetters. ",
   "an6.56:8.3": "But when he heard that teaching his mind was freed from them. ",
   "an6.56:9.1": "Ānanda, there are these six benefits to hearing the teaching at the right time and examining the meaning at the right time. ",
   "an6.56:9.2": "What six? ",
