--- a/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
@@ -29,7 +29,7 @@
   "an6.56:7.1": "Not long after the Buddha left, Venerable Phagguṇa passed away. ",
   "an6.56:7.2": "At the time of his death, his faculties were bright and clear. ",
   "an6.56:7.3": "Then Venerable Ānanda went up to the Buddha, bowed, sat down to one side, and said to him, ",
-  "an6.56:7.4": "“Sir, soon after the Buddha left, Venerable Phagguṇa died. ",
+  "an6.56:7.4": "“Sir, soon after the Buddha left, Venerable Phagguna died. ",
   "an6.56:7.5": "At the time of his death, his faculties were bright and clear.” ",
   "an6.56:8.1": "“And why shouldn’t his faculties be bright and clear? ",
   "an6.56:8.2": "The mendicant Phagguna’s mind was not freed from the five lower fetters. ",
