--- a/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
@@ -25,7 +25,7 @@
   "an6.56:5.2": "I’m not keeping well. ",
   "an6.56:6.1": "The burning in my body is so severe, it feels like two strong men grabbing a weaker man by the arms to burn and scorch him on a pit of glowing coals. ",
   "an6.56:6.2": "I’m not keeping well, I’m not alright. The pain is terrible and growing, not fading; its growing is evident, not its fading.” ",
-  "an6.56:6.3": "Then the Buddha educated, encouraged, fired up, and inspired Venerable Phagguṇa with a Dhamma talk, after which he got up from his seat and left. ",
+  "an6.56:6.3": "Then the Buddha educated, encouraged, fired up, and inspired Venerable Phagguna with a Dhamma talk, after which he got up from his seat and left. ",
   "an6.56:7.1": "Not long after the Buddha left, Venerable Phagguna passed away. ",
   "an6.56:7.2": "At the time of his death, his faculties were bright and clear. ",
   "an6.56:7.3": "Then Venerable Ānanda went up to the Buddha, bowed, sat down to one side, and said to him, ",
