--- a/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
@@ -7,7 +7,7 @@
   "an6.56:1.3": "“Sir, Venerable Phagguṇa is sick. ",
   "an6.56:1.4": "Sir, please go to Venerable Phagguṇa out of compassion.” ",
   "an6.56:1.5": "The Buddha consented in silence. ",
-  "an6.56:1.6": "Then in the late afternoon, the Buddha came out of retreat and went to Venerable Phagguṇa. ",
+  "an6.56:1.6": "Then in the late afternoon, the Buddha came out of retreat and went to Venerable Phagguna. ",
   "an6.56:1.7": "Venerable Phagguna saw the Buddha coming off in the distance ",
   "an6.56:1.8": "and tried to rise on his cot. ",
   "an6.56:1.9": "The Buddha said to him, ",
