Translations by sujato to translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json

--- a/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an6/an6.56_translation-en-sujato.json
@@ -4,7 +4,7 @@
   "an6.56:0.3": "With Phagguṇa ",
   "an6.56:1.1": "Now at that time Venerable Phagguṇa was sick, suffering, gravely ill. ",
   "an6.56:1.2": "Then Venerable Ānanda went up to the Buddha, bowed, sat down to one side, and said to him: ",
-  "an6.56:1.3": "“Sir, Venerable Phagguṇa is sick. ",
+  "an6.56:1.3": "“Sir, Venerable Phagguna is sick. ",
   "an6.56:1.4": "Sir, please go to Venerable Phagguna out of compassion.” ",
   "an6.56:1.5": "The Buddha consented in silence. ",
   "an6.56:1.6": "Then in the late afternoon, the Buddha came out of retreat and went to Venerable Phagguna. ",
