--- a/translation/en/sujato/sutta/dn/dn16_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn16_translation-en-sujato.json
@@ -766,7 +766,7 @@
   "dn16:3.47.8": "Therefore, Ānanda, the misdeed is yours alone, the mistake is yours alone. ",
   "dn16:3.48.1": "Did I not prepare for this when I explained that ",
   "dn16:3.48.2": "we must be parted and separated from all we hold dear and beloved? ",
-  "dn16:3.48.3": "How could it possibly be so that what is born, created, conditioned, and liable to fall apart should not fall apart? ",
+  "dn16:3.48.3": "How could it possibly be so that what is born, created, conditioned, and liable to wear out should not wear out? ",
   "dn16:3.48.4": "The Realized One has discarded, eliminated, released, given up, relinquished, and surrendered the life force. He has definitively stated: ",
   "dn16:3.48.5": "‘The final extinguishment of the Realized One will be soon. ",
   "dn16:3.48.6": "Three months from now the Realized One will finally be extinguished.’ ",
@@ -1232,7 +1232,7 @@
   "dn16:5.14.1": "“Yes, reverend,” Ānanda replied. He went to the Buddha, bowed, and sat down to one side. The Buddha said to him: ",
   "dn16:5.14.2": "“Enough, Ānanda! Do not grieve, do not lament. Did I not prepare for this when I explained that ",
   "dn16:5.14.3": "we must be parted and separated from all we hold dear and beloved? ",
-  "dn16:5.14.4": "How could it possibly be so that what is born, created, conditioned, and liable to fall apart should not fall apart, even the Realized One’s body? ",
+  "dn16:5.14.4": "How could it possibly be so that what is born, created, conditioned, and liable to wear out should not wear out, even the Realized One’s body? ",
   "dn16:5.14.5": "For a long time, Ānanda, you’ve treated the Realized One with deeds of body, speech, and mind that are loving, beneficial, pleasant, whole-hearted, and limitless. ",
   "dn16:5.14.6": "You have done good deeds, Ānanda. Devote yourself to meditation, and you will soon be free of defilements.” ",
   "dn16:5.15.1": "Then the Buddha said to the mendicants: ",
@@ -1474,7 +1474,7 @@
   "dn16:6.11.2": "“Enough, reverends, do not grieve or lament. ",
   "dn16:6.11.3": "Did the Buddha not prepare us for this when he explained that ",
   "dn16:6.11.4": "we must be parted and separated from all we hold dear and beloved? ",
-  "dn16:6.11.5": "How could it possibly be so that what is born, created, conditioned, and liable to fall apart should not fall apart? ",
+  "dn16:6.11.5": "How could it possibly be so that what is born, created, conditioned, and liable to wear out should not wear out? ",
   "dn16:6.11.6": "The deities are complaining.” ",
   "dn16:6.11.7": "“But sir, what kind of deities are you thinking of?” ",
   "dn16:6.11.8": "“There are, Ānanda, deities—both in the sky and on the earth—who are percipient of the earth. With hair disheveled and arms raised, they fall down like their feet were chopped off, rolling back and forth, lamenting: ",
@@ -1554,7 +1554,7 @@
   "dn16:6.20.7": "“Enough, reverends, do not grieve or lament. ",
   "dn16:6.20.8": "Did the Buddha not prepare us for this when he explained that ",
   "dn16:6.20.9": "we must be parted and separated from all we hold dear and beloved? ",
-  "dn16:6.20.10": "How could it possibly be so that what is born, created, conditioned, and liable to fall apart should not fall apart, even the Realized One’s body?” ",
+  "dn16:6.20.10": "How could it possibly be so that what is born, created, conditioned, and liable to wear out should not wear out, even the Realized One’s body?” ",
   "dn16:6.21.1": "Now at that time four of the leading Mallas, having bathed their heads and dressed in unworn clothes, said, ",
   "dn16:6.21.2": "“We shall light the Buddha’s funeral pyre.” But they were unable to do so. ",
   "dn16:6.21.3": "The Mallas said to Anuruddha, ",
