Translations by sujato to translation/en/sujato/sutta/kn/thag/thag14.1_translation-en-sujato.json

--- a/translation/en/sujato/sutta/kn/thag/thag14.1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/kn/thag/thag14.1_translation-en-sujato.json
@@ -23,7 +23,7 @@
   "thag14.1:5.2": "I gladden the mind. ",
   "thag14.1:5.3": "I develop the meditation of Brahmā, ",
   "thag14.1:5.4": "which sinners do not cultivate. ",
-  "thag14.1:6.1": "Having entered a meditation state without thought, ",
+  "thag14.1:6.1": "When in a meditation without placing the mind, ",
   "thag14.1:6.2": "a disciple of the Buddha ",
   "thag14.1:6.3": "is at that moment blessed ",
   "thag14.1:6.4": "with noble silence. ",
