Translations by sujato to translation/en/sujato/sutta/sn/sn35/sn35.96_translation-en-sujato.json

--- a/translation/en/sujato/sutta/sn/sn35/sn35.96_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.96_translation-en-sujato.json
@@ -26,7 +26,7 @@
   "sn35.96:4.4": "‘My skillful qualities are not declining. ",
   "sn35.96:4.5": "For this is what the Buddha calls non-decline.’ ",
   "sn35.96:4.6": "That’s how someone is not liable to decline. ",
-  "sn35.96:5.1": "And what are the six dimensions of mastery? ",
+  "sn35.96:5.1": "And what are the six fields of mastery? ",
   "sn35.96:5.2": "When a mendicant sees a sight with the eye, bad, unskillful phenomena don’t arise: memories and thoughts prone to fetters. ",
   "sn35.96:5.3": "They should understand: ",
   "sn35.96:5.4": "‘This sense field has been mastered. ",
