--- a/translation/en/sujato/sutta/sn/sn35/sn35.96_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.96_translation-en-sujato.json
@@ -2,7 +2,7 @@
   "sn35.96:0.1": "Linked Discourses 35.96 ",
   "sn35.96:0.2": "10. The Sixes ",
   "sn35.96:0.3": "Liable to Decline ",
-  "sn35.96:1.1": "“Mendicants, I will teach you who is liable to decline, who is not liable to decline, and the six dimensions of mastery. ",
+  "sn35.96:1.1": "“Mendicants, I will teach you who is liable to decline, who is not liable to decline, and the six fields of mastery. ",
   "sn35.96:1.2": "Listen … ",
   "sn35.96:1.3": "And how is someone liable to decline? ",
   "sn35.96:1.4": "When a mendicant sees a sight with the eye, bad, unskillful phenomena arise: memories and thoughts prone to fetters. ",
