--- a/translation/en/sujato/sutta/sn/sn35/sn35.96_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn35/sn35.96_translation-en-sujato.json
@@ -35,5 +35,5 @@
   "sn35.96:5.7": "They should understand: ",
   "sn35.96:5.8": "‘This sense field has been mastered. ",
   "sn35.96:5.9": "For this is what the Buddha calls a field of mastery.’ ",
-  "sn35.96:5.10": "These are the six dimensions of mastery.” "
+  "sn35.96:5.10": "These are the six fileds of mastery.” "
 }
