--- a/translation/en/sujato/sutta/dn/dn1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn1_translation-en-sujato.json
@@ -643,7 +643,7 @@
   "dn1:3.71.11": "",
   "dn1:3.71.12": "Now, when those ascetics and brahmins theorize about the past and the future on these sixty-two grounds, all of them experience this by repeated contact through the six fields of contact. Their feeling is a condition for craving. Craving is a condition for grasping. Grasping is a condition for continued existence. Continued existence is a condition for rebirth. Rebirth is a condition for old age and death, sorrow, lamentation, pain, sadness, and distress to come to be. ",
   "dn1:3.72.0": "5. The End of the Round ",
-  "dn1:3.72.1": "When a mendicant truly understands the six fields of contacts’ origin, ending, gratification, drawback, and escape, they understand what lies beyond all these things. ",
+  "dn1:3.72.1": "When a mendicant truly understands the six fields of contact’s origin, ending, gratification, drawback, and escape, they understand what lies beyond all these things. ",
   "dn1:3.72.2": "All of these ascetics and brahmins who theorize about the past or the future are trapped in the net of these sixty-two grounds, so that wherever they emerge they are caught and trapped in this very net. ",
   "dn1:3.72.3": "Suppose a deft fisherman or his apprentice were to cast a fine-meshed net over a small pond. They’d think: ‘Any sizable creatures in this pond will be trapped in the net. Wherever they emerge they are caught and trapped in this very net.’ ",
   "dn1:3.72.4": "In the same way, all of these ascetics and brahmins who theorize about the past or the future are trapped in the net of these sixty-two grounds, so that wherever they emerge they are caught and trapped in this very net. ",
