--- a/translation/en/sujato/sutta/an/an4/an4.10_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an4/an4.10_translation-en-sujato.json
@@ -21,7 +21,7 @@
   "an4.10:3.4": "This is called the attachment to views. ",
   "an4.10:3.5": "Such are the attachments to sensual pleasures, future lives, and views. ",
   "an4.10:4.1": "And what is the attachment to ignorance? ",
-  "an4.10:4.2": "It’s when you don’t truly understand the six fields of contacts’ origin, ending, gratification, drawback, and escape, ",
+  "an4.10:4.2": "It’s when you don’t truly understand the six fields of contact’s origin, ending, gratification, drawback, and escape, ",
   "an4.10:4.3": "so ignorance and unknowing of the six fields of contact linger on inside. ",
   "an4.10:4.4": "This is called the attachment to ignorance. ",
   "an4.10:4.5": "Such are the attachments to sensual pleasures, future lives, views, and ignorance. ",
