Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -661,7 +661,7 @@
   "sn-blurbs:sn22.140": "Gebt das Sehnen nach dem, was Leiden ist, d. h. nach den fünf Aggregaten, auf. ",
   "sn-blurbs:sn22.141": "Gebt das Begehren nach dem, was Leiden ist, d. h. nach den fünf Aggregaten, auf. ",
   "sn-blurbs:sn22.142": "Gebt Sehnen und Begehren nach dem, was Leiden ist, d. h. nach den fünf Aggregaten, auf. ",
-  "sn-blurbs:sn22.143": "Gebt das Sehnen nach dem, was nicht-selbst ist, d. h. nach den fünf Aggregaten, auf. ",
+  "sn-blurbs:sn22.143": "Gebt das Sehnen nach dem, was ohne Selbst ist, d. h. nach den fünf Aggregaten, auf. ",
   "sn-blurbs:sn22.144": "Gebt das Begehren nach dem, was nicht-selbst ist, d. h. nach den fünf Aggregaten, auf. ",
   "sn-blurbs:sn22.145": "Gebt Sehnen und Begehren nach dem, was nicht-selbst ist, d. h. nach den fünf Aggregaten, auf. ",
   "sn-blurbs:sn22.146": "Wenn jemand fortgezogen ist, soll er von den fünf Aggregaten äußerst ernüchtert sein. ",
