Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -695,7 +695,7 @@
   "sn-blurbs:sn23.14": "Rādha fragt den Buddha nach Dingen, die ihrer Natur nach unbeständig sind, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.15": "Rādha fragt den Buddha nach dem Leiden, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.16": "Rādha fragt den Buddha nach Dingen, die ihrer Natur nach Leiden sind, und dieser antwortet in Begriffen der fünf Aggregate. ",
-  "sn-blurbs:sn23.17": "Rādha fragt den Buddha nach dem Nicht-Selbst, und dieser antwortet in Begriffen der fünf Aggregate. ",
+  "sn-blurbs:sn23.17": "Rādha fragt den Buddha nach dem, was ohne Selbst ist, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.18": "Rādha fragt den Buddha nach Dingen, die ihrer Natur nach nicht-selbst sind, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.19": "Rādha fragt den Buddha nach Dingen, die enden müssen, und dieser antwortet in Begriffen der fünf Aggregate. ",
   "sn-blurbs:sn23.20": "Rādha fragt den Buddha nach Dingen, die verschwinden müssen, und dieser antwortet in Begriffen der fünf Aggregate. ",
