Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -732,7 +732,7 @@
   "sn-blurbs:sn35.2": "Die sechs inneren Sinnesfelder sind Leiden und ohne Selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.3": "Die sechs inneren Sinnesfelder sind ohne Selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.4": "Die sechs äußeren Sinnesfelder sind unbeständig, Leiden und ohne Selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
-  "sn-blurbs:sn35.5": "Die sechs äußeren Sinnesfelder sind Leiden und nicht-selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
+  "sn-blurbs:sn35.5": "Die sechs äußeren Sinnesfelder sind Leiden und ohne Selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.6": "Die sechs äußeren Sinnesfelder sind nicht-selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.7": "Die sechs inneren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart unbeständig, Leiden und nicht-selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.8": "Die sechs inneren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart Leiden und nicht-selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
