Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -737,7 +737,7 @@
   "sn-blurbs:sn35.7": "Die sechs inneren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart unbeständig, Leiden und ohne Selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.8": "Die sechs inneren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart Leiden und ohne Selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.9": "Die sechs inneren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart ohne Selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
-  "sn-blurbs:sn35.10": "Die sechs äußeren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart unbeständig, Leiden und nicht-selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
+  "sn-blurbs:sn35.10": "Die sechs äußeren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart unbeständig, Leiden und ohne Selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.11": "Die sechs äußeren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart Leiden und nicht-selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.12": "Die sechs äußeren Sinnesfelder sind in der Vergangenheit, der Zukunft und der Gegenwart nicht-selbst. Wenn ein edler Schüler sie so richtig erkennt, wird er ernüchtert und befreit. ",
   "sn-blurbs:sn35.13": "Bevor er nicht die vorteilhaften und nachteiligen Folgen und das Entrinnen hinsichtlich der sechs inneren Sinnesfelder erkannt hatte, behauptete der Buddha nicht, erwacht zu sein. ",
