Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -759,7 +759,7 @@
   "sn-blurbs:sn35.29": "„Alles“, das aus den sechs inneren und äußeren Sinnesfeldern besteht, ist unterdrückt. ",
   "sn-blurbs:sn35.30": "Um sich mit nichts gleichzusetzen, muss man das Sichgleichsetzen mit den sechs inneren und äußeren Sinnesfeldern aufgeben. ",
   "sn-blurbs:sn35.31": "Um sich mit nichts gleichzusetzen, muss man das Sichgleichsetzen mit den sechs inneren und äußeren Sinnesfeldern aufgeben. ",
-  "sn-blurbs:sn35.32": "Um sich mit nichts gleichzusetzen, muss man verstehen, dass die sechs inneren und äußeren Sinnesfelder unbeständig, Leiden und nicht-selbst sind. ",
+  "sn-blurbs:sn35.32": "Um sich mit nichts gleichzusetzen, muss man verstehen, dass die sechs inneren und äußeren Sinnesfelder unbeständig, Leiden und ohne Selbst sind. ",
   "sn-blurbs:sn35.33-42": "„Alles“, das aus den sechs inneren und äußeren Sinnesfeldern besteht, muss wiedergeboren werden, alt werden usw. ",
   "sn-blurbs:sn35.43-51": "„Alles“, das aus den sechs inneren und äußeren Sinnesfeldern besteht, ist unbeständig usw. ",
   "sn-blurbs:sn35.52": "„Alles“, das aus den sechs inneren und äußeren Sinnesfeldern besteht, ist verstört. ",
