Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -788,7 +788,7 @@
   "sn-blurbs:sn35.75": "Als er hört, dass ein frisch ordinierter Mönch krank ist, besucht ihn der Buddha, um ihn zu unterstützen und ihm mit einem Dhammavortrag Mut zuzusprechen. ",
   "sn-blurbs:sn35.76": "Rādha bittet den Buddha um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha rät ihm, das Sehnen nach Sinneserfahrungen aufzugeben, da sie unbeständig sind. ",
   "sn-blurbs:sn35.77": "Rādha bittet den Buddha um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha rät ihm, das Sehnen nach Sinneserfahrungen aufzugeben, da sie Leiden sind. ",
-  "sn-blurbs:sn35.78": "Rādha bittet den Buddha um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha rät ihm, das Sehnen nach Sinneserfahrungen aufzugeben, da sie nicht-selbst sind. ",
+  "sn-blurbs:sn35.78": "Rādha bittet den Buddha um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha rät ihm, das Sehnen nach Sinneserfahrungen aufzugeben, da sie ohne Selbst sind. ",
   "sn-blurbs:sn35.79": "Indem man Unwissenheit aufgibt, erscheint Wissen. Zu diesem Zweck soll man die Unbeständigkeit der sechs Sinne betrachten. ",
   "sn-blurbs:sn35.80": "Indem man Unwissenheit aufgibt, erscheint Wissen. Zu diesem Zweck soll man die Unbeständigkeit der sechs Sinne betrachten. Dadurch versteht ein Mönch wahrhaftig und sieht alles als fremd. ",
   "sn-blurbs:sn35.81": "Mehrere Mönche und Nonnen vergewissern sich beim Buddha, dass es richtig ist, zu sagen, dass man das geistliche Leben führt, um das Leiden zu verstehen. Der Buddha bestätigt das und erklärt, was das Leiden ist: der Vorgang der Sinneserfahrung. ",
