Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -538,7 +538,7 @@
   "sn-blurbs:sn22.17": "Man soll die fünf Aggregate wahrhaftig als ohne Selbst verstehen. ",
   "sn-blurbs:sn22.18": "Wenn die Ursachen der Aggregate unbeständig sind, wie können da die Aggregate beständig sein? ",
   "sn-blurbs:sn22.19": "Wenn die Ursachen der Aggregate Leiden sind, wie können da die Aggregate Glück sein? ",
-  "sn-blurbs:sn22.20": "Wenn die Ursachen der Aggregate nicht-selbst sind, wie können da die Aggregate ein Selbst sein? ",
+  "sn-blurbs:sn22.20": "Wenn die Ursachen der Aggregate ohne Selbst sind, wie können da die Aggregate ein Selbst sein? ",
   "sn-blurbs:sn22.21": "Ānanda fragt den Buddha, was Aufhören genau bedeutet. Der Buddha sagt, es ist, wenn die fünf Aggregate aufhören. ",
   "sn-blurbs:sn22.22": "Die Aggregate sind die Last. Ein Mensch trägt diese Last. Verlangen nimmt die Last auf, und Loslassen legt sie ab. ",
   "sn-blurbs:sn22.23": "Die Aggregate müssen vollständig verstanden werden, und das vollständige Verstehen ist das Enden der Befleckungen. ",
