Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -560,7 +560,7 @@
   "sn-blurbs:sn22.39": "Um im Einklang mit den Lehren zu üben, soll man über die Ernüchterung im Hinblick auf die fünf Aggregate meditieren. ",
   "sn-blurbs:sn22.40": "Um im Einklang mit den Lehren zu üben, soll man über die Unbeständigkeit der fünf Aggregate meditieren. ",
   "sn-blurbs:sn22.41": "Um im Einklang mit den Lehren zu üben, soll man über das Leiden bei den fünf Aggregaten meditieren. ",
-  "sn-blurbs:sn22.42": "Um im Einklang mit den Lehren zu üben, soll man darüber meditieren, dass die fünf Aggregate nicht-selbst sind. ",
+  "sn-blurbs:sn22.42": "Um im Einklang mit den Lehren zu üben, soll man darüber meditieren, dass die fünf Aggregate ohne Selbst sind. ",
   "sn-blurbs:sn22.43": "Sei deine eigene Insel und Zuflucht, nimm den Dhamma als Insel und Zuflucht. Wie? Indem du untersuchst, wie aus der Identifikation mit den Aggregaten Leiden entsteht. ",
   "sn-blurbs:sn22.44": "Die Betrachtung, dass die fünf Aggregate nicht-selbst sind, ist der Weg zum Ende der Persönlichkeit. ",
   "sn-blurbs:sn22.45": "Wenn man die fünf Aggregate als unbeständig usw. sieht, führt das zur Freiheit. ",
