Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -562,7 +562,7 @@
   "sn-blurbs:sn22.41": "Um im Einklang mit den Lehren zu üben, soll man über das Leiden bei den fünf Aggregaten meditieren. ",
   "sn-blurbs:sn22.42": "Um im Einklang mit den Lehren zu üben, soll man darüber meditieren, dass die fünf Aggregate ohne Selbst sind. ",
   "sn-blurbs:sn22.43": "Sei deine eigene Insel und Zuflucht, nimm den Dhamma als Insel und Zuflucht. Wie? Indem du untersuchst, wie aus der Identifikation mit den Aggregaten Leiden entsteht. ",
-  "sn-blurbs:sn22.44": "Die Betrachtung, dass die fünf Aggregate nicht-selbst sind, ist der Weg zum Ende der Persönlichkeit. ",
+  "sn-blurbs:sn22.44": "Die Betrachtung, dass die fünf Aggregate ohne Selbst sind, ist der Weg zum Ende der Persönlichkeit. ",
   "sn-blurbs:sn22.45": "Wenn man die fünf Aggregate als unbeständig usw. sieht, führt das zur Freiheit. ",
   "sn-blurbs:sn22.46": "Wenn man die fünf Aggregate als unbeständig usw. sieht, führt das zum Loslassen von Ansichten und letztlich zur Freiheit. ",
   "sn-blurbs:sn22.47": "Wenn man etwas als sein Selbst ansieht, ist es immer eins der fünf Aggregate. ",
