Translations by sabbamitta to translation/de/blurb/sn-blurbs_translation-de.json

--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -589,7 +589,7 @@
   "sn-blurbs:sn22.68": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha leitet ihn an, das Verlangen nach allem, was ohne Selbst ist, aufzugeben, und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
   "sn-blurbs:sn22.69": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha leitet ihn an, das Verlangen nach allem, was nicht zu einem Selbst gehört, aufzugeben, und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
   "sn-blurbs:sn22.70": "Ein Mönch bittet um Unterweisung, bevor er sich zur Klausur zurückzieht. Der Buddha leitet ihn an, das Verlangen nach allem, was im Erregenden feststeckt, aufzugeben, und der Mönch gibt selbst die Erläuterung zu dieser kurzen Aussage. ",
-  "sn-blurbs:sn22.71": "Der Ehrwürdige Rādha fragt den Buddha, wie man sehen soll, sodass man die Einbildung loslässt. Der Buddha rät zu Betrachtungen in Begriffen des Nicht-Selbst. ",
+  "sn-blurbs:sn22.71": "Der Ehrwürdige Rādha fragt den Buddha, wie man sehen soll, sodass man die Einbildung loslässt. Der Buddha rät zu Betrachtungen in Begriffen des Fehlens eines Selbst. ",
   "sn-blurbs:sn22.72": "Der Ehrwürdige Rādha fragt den Buddha, wie man sehen soll, sodass man die Einbildung loslässt und befreit wird. Der Buddha rät zu Betrachtungen in Begriffen des Nicht-Selbst. ",
   "sn-blurbs:sn22.73": "Nur ein edler Schüler kann die vorteilhaften und nachteiligen Folgen der Aggregate und das Entrinnen von ihnen wirklich verstehen. ",
   "sn-blurbs:sn22.74": "Nur ein edler Schüler kann den Ursprung, das Enden, die vorteilhaften und nachteiligen Folgen der Aggregate und das Entrinnen von ihnen wirklich verstehen. ",
